兼容处理